--- a/layout.html
+++ b/layout.html
@@ -8,7 +8,7 @@
 
   <body>
     <table>
-      <caption>Some of my favorite DC heroes!</caption>
+      <caption>Some of my favorite DC heroes! (Mostly Silver Age)</caption>
 
       <thead>
 	<th></th> <th>JLA Member</th><th>Home Planet</th>
@@ -32,18 +32,18 @@
 	</tr>
 
 	<tr>
-	  <th>Wonder Woman</th> <td>Yes</td><td>Earth</td>
-	  <td>Boston</td><td>Wonder Girl</td><td>Diana of Themyscira</td>
+	  <th>The Flash</th> <td>Yes</td><td>Earth</td>
+	  <td>Central City</td><td>Kid Flash</td><td>Barry Allen</td>
 	</tr>
 
 	<tr>
-	  <th>Wonder Woman</th> <td>Yes</td><td>Earth</td>
-	  <td>Boston</td><td>Wonder Girl</td><td>Diana of Themyscira</td>
+	  <th>Green Lantern</th> <td>Yes</td><td>Earth</td>
+	  <td>Coast City</td><td>None</td><td>Hal Jordan</td>
 	</tr>
       </tbody>
       <tfoot>
-	<td colspan=2>Other heroes:</td>
-	<td colspan=4>NightWing, Plastic Man</td>
+	<td>Other heroes:</td>
+	<td>NightWing, Plastic Man</td>
       </tfoot>
     </table>
 
