updated with the blue and pink divs

--- a/layout.html
+++ b/layout.html
@@ -42,8 +42,8 @@
 	</tr>
       </tbody>
       <tfoot>
-	<td>Other heroes:</td>
-	<td>NightWing, Plastic Man</td>
+	<td colspan=2>Other heroes:</td>
+	<td colspan=4>NightWing, Plastic Man</td>
       </tfoot>
     </table>
 
@@ -56,7 +56,7 @@
       <dd>Anything you need to measure in Kelvin</dd>
     </dl>
 
-
+<div id="outer-content"><div id="inner-content">Some content </div></div>
 
 
   </body>
