All requirements met

--- a/layout.html
+++ b/layout.html
@@ -56,8 +56,52 @@
       <dd>Anything you need to measure in Kelvin</dd>
     </dl>
 
-<div id="outer-content"><div id="inner-content">Some content </div></div>
+    <br><br>Here is a form using GET:
+    <form action="http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method ="GET">
+      Type some text here: <input type="text" name="text_input"> 
+      <br>
+      Type a number here: <input type="number"  name="numerical_input">
+      <br>
+      Enter a fake password here: <input type="password" name= "password_input">
+      <br><br>
+      Pick your favorite candy:<br>
+      <input type="radio" name="candy" value="Snickers" checked>
+      Snickers<br>
+      <input type="radio" name="candy" value="Skittles">
+      Skittles<br>
+      <input type="radio" name="candy" value="Mentos">
+      Mentos<br>
+      <input type="submit" value="SUBMIT">
+      </form>
 
+    <br><br>Here is a form using POST:
+    <form action="http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method ="POST">
+      Type some text here: <input type="text" name="text_input"> 
+      <br>
+      Type a number here: <input type="number"  name="numerical_input">
+      <br>
+      Enter a fake password here: <input type="password" name= "password_input">
+      <br><br>
+      Pick your favorite candy:<br>
+      <input type="radio" name="candy" value="Snickers" checked>
+      Snickers<br>
+      <input type="radio" name="candy" value="Skittles">
+      Skittles<br>
+      <input type="radio" name="candy" value="Mentos">
+      Mentos<br>
+      <input type="submit" value="SUBMIT">
+      </form>
+
+
+    <div id="outer-content"><div id="inner-content">Here are some nested divs </div></div>
+
+
+    <br><br>
+    <img src= "buddha.gif">
+    <p> Believe nothing, No matter where you read it, Or who has said it, Not
+      even if I have said it, Unless it agrees with your own reason, 
+      And your Own common sense.</p>
+    <p>-Buddha</p>
 
   </body>
 
