added some borders and fixed image size

--- a/layout.html
+++ b/layout.html
@@ -98,9 +98,12 @@
 
     <br><br>
     <img src= "buddha.gif">
-    <p> Believe nothing, No matter where you read it, Or who has said it, Not
-      even if I have said it, Unless it agrees with your own reason, 
-      And your Own common sense.</p>
+    <p> Believe nothing, 
+      <br>No matter where you read it, 
+      <br>Or who has said it, 
+      <br>Not even if I have said it,
+      <br> Unless it agrees with your own reason, 
+      <br>And your Own common sense.</p>
     <p>-Buddha</p>
 
   </body>
